Clean up and updated dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,8 @@ readme = "README.md"
 requires-python = "~=3.11.0"
 dependencies = [
     "reflex (>=0.8.17,<0.9.0)",
-    "xian-contracting @ file:///Users/endogen/Projekte/xian-playground/xian-contracting",
+    "xian-contracting (>=1.0.1,<2.0.0)",
     "xian-linter (>=0.2.4,<0.3.0)",
-    "starlette (>=0.50.0,<0.51.0)",
     "xian-py (>=0.4.7,<0.5.0)"
 ]
 
@@ -20,5 +19,5 @@ dependencies = [
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.poetry.dependencies]
-xian-contracting = {develop = true}
+[tool.poetry]
+package-mode = false
