--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 __pycache__/
-assets/external/
-.web
 .states
+.web
 *.db
 *.py[cod]
 .idea
 .claude
 .env
 docs/
+tests/
 AGENTS.md
 CLAUDE.md
+PROGRESS.md
 no-gambiarra-policy.txt
 playground/.contract_state/
 playground/.sessions/
-tests/
